# HPX-FFT

core/: CMakeLists.txt
core/include/hpxfft/2D/distributed/: agas.hpp  agas_server.hpp  loop.hpp
core/include/hpxfft/2D/shared/: agas.hpp  agas_server.hpp  loop.hpp  naive.hpp  opt.hpp  sync.hpp
core/include/hpxfft/3D/shared/: loop.hpp  naive.hpp  shared_base.hpp  sync.hpp
core/include/hpxfft/util/: print_vector_3d.hpp  vector_3d.hpp
core/src/2D/distributed/: agas.cpp  loop.cpp
core/src/2D/shared/: agas.cpp  loop.cpp  naive.cpp  opt.cpp  sync.cpp
core/src/3D/shared/: loop.cpp  naive.cpp  sync.cpp
examples/hpxfft/: CMakeLists.txt  distributed_agas_2d.cpp  distributed_loop_2d.cpp  shared_agas_2d.cpp  shared_loop_2d.cpp  shared_loop_3d.cpp  shared_naive_2d.cpp  shared_naive_3d.cpp  shared_opt_2d.cpp  shared_sync_2d.cpp  shared_sync_3d.cpp
test/: CMakeLists.txt
test/src/: test_distributed_agas.cpp  test_distributed_loop.cpp  test_naive.cpp  test_shared_agas.cpp  test_shared_loop.cpp  test_shared_loop_3d.cpp  test_shared_naive_3d.cpp  test_shared_opt.cpp  test_shared_sync.cpp  test_shared_sync_3d.cpp  test_vector_3d.cpp
